// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 Default render 1`] = `
<div>
  <div
    class="MuiBox-root css-1n1j97o"
  >
    <div
      class="MuiBox-root css-1sfu4nm"
    >
      <div
        class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorSuccess MuiChip-clickable MuiChip-clickableColorSuccess MuiChip-filledSuccess css-afy8jx-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
        >
          mainnet
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2 Render with testnet 1`] = `
<div>
  <div
    class="MuiBox-root css-1n1j97o"
  >
    <div
      class="MuiBox-root css-1sfu4nm"
    >
      <div
        class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorWarning MuiChip-clickable MuiChip-clickableColorWarning MuiChip-filledWarning css-m3kjui-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
        >
          testnet
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3 Default render NetworkMenu 1`] = `
<div>
  <div
    class="MuiBox-root css-9kanww"
  >
    <div
      class="MuiBox-root css-jmbq56"
    >
      <div
        class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorSuccess MuiChip-clickable MuiChip-clickableColorSuccess MuiChip-filledSuccess css-afy8jx-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
        >
          mainnet
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorWarning MuiChip-clickable MuiChip-clickableColorWarning MuiChip-filledWarning css-m3kjui-MuiButtonBase-root-MuiChip-root"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
        >
          testnet
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </div>
    </div>
  </div>
</div>
`;
